# AutoLabel

./: .coverage  README.md  pyproject.toml
.github/workflows/: ci.yml
AutoLabel/: main.py  page_count.py
raw_label_input/: label1.xlsx  label2.xlsx  raw_labels.xlsx
tests/: test_label_remarker.py
