[tool.poetry]
name = "AutoLabel"
version = "0.1.0"
description = ""
authors = ["ivanxiedata <ivanxiedata@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pypdf2 = "^3.0.1"
reportlab = "^4.2.5"
googletrans = "4.0.0-rc1"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
